# data-engineering-programming-final

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
data/input/dataset-json-pagamentos/: README.md
data/input/datasets-csv-pedidos/: README.md
src/: main.py
src/config/: settings.py
src/io_utils/: data_handler.py
src/pipeline/: pipeline.py
src/processing/: transformations.py
src/session/: spark_session.py
tests/unit/: test_transformations.py
